Edited the navigation in HTML and CSS
nav looks different

--- a/P01-Style Guide/index.html
+++ b/P01-Style Guide/index.html
@@ -33,11 +33,10 @@
       <section class="element">
         <h2>Navigation</h2>
           <nav>
-            <ul>
-              <li><a class="button-navi" href="">Style Guide</a></li>
-              <li><a class="button-navi" href="products.html">Menu</a></li>
-              <li><a class="button-navi" href="checkout.html">Checkout</a></li>
-            </ul>
+            <a href="#" class="nav">HOME</a>
+        <a href="#" class="nav">MENU</a>
+        <a href="#" class="nav">CART</a>
+        <a href="#" class="nav">CONTACT</a>
           </nav>
         <code>"&lt;a href="" class="button"&gt;Style Guide&lt;/a&gt;"</code>
 
