--- a/P01-Style Guide/index.html
+++ b/P01-Style Guide/index.html
@@ -35,8 +35,8 @@
 
           <nav>
             <a href="#" class="nav">HOME</a>
-            <a href="#" class="nav">MENU</a>
-            <a href="#" class="nav">CART</a>
+            <a href="products.html" class="nav">MENU</a>
+            <a href="checkout.html" class="nav">CART</a>
             <a href="#" class="nav">CONTACT</a>
           </nav>
 
