--- a/P01-Style Guide/products.html
+++ b/P01-Style Guide/products.html
@@ -13,12 +13,11 @@
 
 <body> 
 	<div class="left">
-		<nav class="pagenav">
-			<ul>
-				<li><a class="button-navi" href="index.html">Style Guide</a></li>
-		  		<li><a class="button-navi" href="">Menu</a></li>
-		  		<li><a class="button-navi" href="checkout.html">Checkout</a></li>
-			</ul>
+		<nav>
+            <a href="#" class="nav">HOME</a>
+            <a href="products.html" class="nav">MENU</a>
+            <a href="checkout.html" class="nav">CART</a>
+            <a href="#" class="nav">CONTACT</a>
 		</nav>
 	</div>
 	
