Added light text to main page
changed html and css

--- a/P01-Style Guide/main.html
+++ b/P01-Style Guide/main.html
@@ -17,7 +17,10 @@
             <a href="checkout.html" class="nav">CART</a>
             <a href="#" class="nav">CONTACT</a>
           </nav>
-
+<div>
+  <h2 class="light-text">Lorem Ipsum</h2>
+  <p class="light-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum fermentum felis, nec mollis nisl porta vitae. Pellentesque vulputate dolor id augue placerat, eu cursus enim imperdiet. Duis at suscipit turpis. Morbi sit amet fringilla purus, fringilla condimentum elit. Praesent ac finibus quam. Fusce consectetur tellus ligula, venenatis imperdiet ex vehicula non.</p>
+</div>
 
 
 
