Main page and css changes
nav bar has bg color and is fixed

--- a/P01-Style Guide/main.html
+++ b/P01-Style Guide/main.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <title>Main Page</title>
+  <meta charset="utf-8">
+  <title>Main Page</title>
 
-    <link href="css/main.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body class="home">
-          <nav>
-            <a href="#" class="nav">HOME</a>
-            <a href="products.html" class="nav">MENU</a>
-            <a href="checkout.html" class="nav">CART</a>
-            <a href="#" class="nav">CONTACT</a>
-          </nav>
+<body>
+<nav>
+    <a href="main.html" class="nav">HOME</a>
+    <a href="products.html" class="nav">MENU</a>
+    <a href="checkout.html" class="nav">CART</a>
+    <a href="#" class="nav">CONTACT</a>
+  </nav>
+
+  <div class="panel first">
+  <div>
+    <h3 class="light-text middletitle">Lorem ipsum</h3>
+    <p class="light-text middletext">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus. Nunc tincidunt elementum scelerisque. Praesent est metus, elementum id tellus ac, consectetur suscipit tortor. Suspendisse risus sem, aliquam sit amet dui ut, pellentesque ultrices elit. Quisque tincidunt neque id nisl pellentesque, sed dignissim augue aliquam.
+    </p>
+  </div>
+</div>
+
 <div>
-  <h2 class="light-text">Lorem Ipsum</h2>
-  <p class="light-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum fermentum felis, nec mollis nisl porta vitae. Pellentesque vulputate dolor id augue placerat, eu cursus enim imperdiet. Duis at suscipit turpis. Morbi sit amet fringilla purus, fringilla condimentum elit. Praesent ac finibus quam. Fusce consectetur tellus ligula, venenatis imperdiet ex vehicula non.</p>
+
+</div>
+
+<div class="panel third">
+
 </div>
 
 
 
 
-
-  </body>
-  </html>
+</body>
+</html>
