Small edits in css and html

--- a/P01-Style Guide/main.html
+++ b/P01-Style Guide/main.html
@@ -21,7 +21,7 @@
   <div class="panel first">
   <div>
     <h3 class="light-text middletitle">Lorem ipsum</h3>
-    <p class="light-text middletext">
+    <p class="light-text middletext bodyp">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus. Nunc tincidunt elementum scelerisque. Praesent est metus, elementum id tellus ac, consectetur suscipit tortor. Suspendisse risus sem, aliquam sit amet dui ut, pellentesque ultrices elit. Quisque tincidunt neque id nisl pellentesque, sed dignissim augue aliquam.
     </p>
   </div>
