--- a/P01-Style Guide/main.html
+++ b/P01-Style Guide/main.html
@@ -29,6 +29,18 @@
 
 <div class="column-half">
   <div class="equalHW">
+
+    <div class="img-holder-div"><img src="menu-img.jpg"></div>
+<h3>About Us</h3>
+  <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
+</div>
+</div>
+
+
+
+<div class="column-half">
+  <div class="equalHW">
+    <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
 </div>
  <div class="equalHW">
@@ -36,8 +48,8 @@
 </div>
 </div>
 
-<div class="panel third">
-
+<div class="equalHW">
+<img src="banner-img.jpg">
 </div>
 
 
