--- a/P01-Style Guide/products.html
+++ b/P01-Style Guide/products.html
@@ -14,6 +14,7 @@
 <body> 
 		<nav>
             <a href="main.html" class="nav">HOME</a>
+            <a href="events.html" class="nav">EVENTS</a>
             <a href="products.html" class="nav">MENU</a>
             <a href="checkout.html" class="nav">CART</a>
             <a href="#" class="nav">CONTACT</a>
