Pages added / fixed
Added contact us page
Updated Nav
Updated Cart page
Events alignment

--- a/P01-Style Guide/events.html
+++ b/P01-Style Guide/events.html
@@ -22,8 +22,8 @@
 <!-- event with right image -->
 <div class="column-half">
   <div class="equalHW">
-    <h3>About Us</h3>
-  <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
+    <h3>About Us</h3><br>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
 </div>
  <div class="equalHW">
   <img src="menu-img2.jpg">
