--- a/P01-Style Guide/main.html
+++ b/P01-Style Guide/main.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-<nav>
+  <nav>
     <a href="main.html" class="nav">HOME</a>
     <a href="events.html" class="nav">EVENTS</a>
     <a href="products.html" class="nav">MENU</a>
     <a href="checkout.html" class="nav">CART</a>
-    <a href="#" class="nav">CONTACT</a>
+    <a href="contact.html" class="nav">CONTACT</a>
   </nav>
 
   <div class="panel first">
