--- a/P01-Style Guide/products.html
+++ b/P01-Style Guide/products.html
@@ -17,7 +17,7 @@
             <a href="events.html" class="nav">EVENTS</a>
             <a href="products.html" class="nav">MENU</a>
             <a href="checkout.html" class="nav">CART</a>
-            <a href="#" class="nav">CONTACT</a>
+            <a href="contact.html" class="nav">CONTACT</a>
 		</nav><div class="left">
 	</div>
 	
