added events to checkout page

--- a/P01-Style Guide/checkout.html
+++ b/P01-Style Guide/checkout.html
@@ -16,6 +16,7 @@
 		<nav>
 			<a href="main.html" class="nav">HOME</a>
 			<a href="products.html" class="nav">MENU</a>
+			<a href="events.html" class="nav">EVENTS</a>
 			<a href="checkout.html" class="nav">CART</a>
 			<a href="contact.html" class="nav">CONTACT</a>
 		</nav>
