Revert "Merge branch 'dzhog'"
This reverts commit 5fb47d9bfaea2bb41a33b860db5b4764cac1b073.

--- a/P01-Style Guide/checkout.html
+++ b/P01-Style Guide/checkout.html
@@ -13,12 +13,12 @@
 
 <body> 
 	<div class="left">
-		<nav>
-			<a href="main.html" class="nav">HOME</a>
-			<a href="products.html" class="nav">MENU</a>
-			<a href="events.html" class="nav">EVENTS</a>
-			<a href="checkout.html" class="nav">CART</a>
-			<a href="contact.html" class="nav">CONTACT</a>
+		<nav class="pagenav">
+			<ul>
+				<li><a class="button-navi" href="index.html">Style Guide</a></li>
+		  		<li><a class="button-navi" href="products.html">Menu</a></li>
+		  		<li><a class="button-navi" href="">Checkout</a></li>
+			</ul>
 		</nav>
 	</div>
 
