--- a/P01-Style Guide/products.html
+++ b/P01-Style Guide/products.html
@@ -12,20 +12,21 @@
 </header>
 
 <body> 
-		<nav>
-            <a href="main.html" class="nav">HOME</a>
-            <a href="events.html" class="nav">EVENTS</a>
-            <a href="products.html" class="nav">MENU</a>
-            <a href="checkout.html" class="nav">CART</a>
-            <a href="contact.html" class="nav">CONTACT</a>
-		</nav><div class="left">
+	<div class="left">
+		<nav class="pagenav">
+			<ul>
+				<li><a class="button-navi" href="index.html">Style Guide</a></li>
+		  		<li><a class="button-navi" href="">Menu</a></li>
+		  		<li><a class="button-navi" href="checkout.html">Checkout</a></li>
+			</ul>
+		</nav>
 	</div>
 	
 	<div class="right">
 		<div class="grid">
 			<h2>Classic Americano</h2> 
 
-        	<img src="americano.jpg" class="product-img"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
+        	<img src="americano.jpg"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
         	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
         	<h3 class = "prices">Small: $3.50<br>Medium: $4:50<br>Large: $5.50<br></h3>
         	<button class="add">add to cart</button>
