--- a/P01-Style Guide/index.html
+++ b/P01-Style Guide/index.html
@@ -32,14 +32,13 @@
     <!-- INTERACTIVE ELEMENTS SECTION // -->
       <section class="element">
         <h2>Navigation</h2>
-
           <nav>
-            <a href="#" class="nav">HOME</a>
-            <a href="products.html" class="nav">MENU</a>
-            <a href="checkout.html" class="nav">CART</a>
-            <a href="#" class="nav">CONTACT</a>
+            <ul>
+              <li><a class="button-navi" href="">Style Guide</a></li>
+              <li><a class="button-navi" href="products.html">Menu</a></li>
+              <li><a class="button-navi" href="checkout.html">Checkout</a></li>
+            </ul>
           </nav>
-
         <code>"&lt;a href="" class="button"&gt;Style Guide&lt;/a&gt;"</code>
 
       </section>
@@ -153,7 +152,6 @@
     <section id="combined_elements">
       <!--<h2>Combined Elements</h2>-->
 
-<!--
       <section class="element">
         <h2>Main Navigation</h2>
         <nav>
@@ -170,8 +168,6 @@
         &lt;/nav>
         </code>
       </section>
-
-      -->
 
       <section class="element">
 
