--- a/P01-Style Guide/products.html
+++ b/P01-Style Guide/products.html
@@ -22,7 +22,7 @@
 		<div class="grid">
 			<h2>Classic Americano</h2> 
 
-        	<img src="americano.jpg" class="product-img"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
+        	<img src="americano.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
         	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
         	<h3 class = "prices">Small: $3.50<br>Medium: $4:50<br>Large: $5.50<br></h3>
         	<button class="add">add to cart</button>
@@ -31,7 +31,7 @@
         <div class="grid">
         	<h2>Latte</h2>
 
-        	<img src="latte.jpg"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
+        	<img src="latte.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
 
         	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
 
@@ -42,7 +42,7 @@
         <div class="grid">
         	<h2>Cappuccino</h2>
 
-        	<img src="coffee.jpg"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
+        	<img src="coffee.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
 
         	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
 
@@ -53,7 +53,7 @@
         <div class="grid">
 			<h2>Mocha</h2>
 
-        	<img src="mocha.jpg"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
+        	<img src="mocha.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
 
         	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
 
@@ -64,7 +64,7 @@
         <div class="grid">
         	<h2>Iced Coffee</h2>
 
-        	<img src="iced coffee.jpg"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
+        	<img src="iced coffee.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
 
         	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
 
@@ -75,7 +75,7 @@
         <div class="grid">
         	<h2>Coffee</h2>
 
-        	<img src="black.jpg"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
+        	<img src="black.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
 
         	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
 
