Got rid of some unnecessary divs

--- a/P01-Style Guide/contact.html
+++ b/P01-Style Guide/contact.html
@@ -7,32 +7,26 @@
 	<link href="css/main.css" rel="stylesheet">
 </head>
 
-
-
 <body> 
-	<div class="left">
-		<nav>
-			<a href="main.html" class="nav">HOME</a>
-			<a href="events.html" class="nav">EVENTS</a>
-			<a href="products.html" class="nav">MENU</a>
-			<a href="checkout.html" class="nav">CART</a>
-			<a href="contact.html" class="nav">CONTACT</a>
-		</nav>
-	</div>
+	<nav>
+		<a href="main.html" class="nav">HOME</a>
+		<a href="events.html" class="nav">EVENTS</a>
+		<a href="products.html" class="nav">MENU</a>
+		<a href="checkout.html" class="nav">CART</a>
+		<a href="contact.html" class="nav">CONTACT</a>
+	</nav>
 
-	<div class="checkright">
+	<div class="center-content">
 		<div class="grid2">
-	        <h2>Your Info</h2>
+			<h2>Your Info</h2>
 
-	      		<input type = "text" name="fn" placeholder="Your Name"><br>
-	      		<input type="text" name="fn" placeholder="Subject"><br><br>
-	      		<textarea class="texta" rows="10" cols="50" placeholder="Your Message">
-	      		</textarea><br><br>
-	      		<button>Submit</button>
+			<input type = "text" name="fn" placeholder="Your Name"><br>
+			<input type="text" name="fn" placeholder="Subject"><br><br>
+			<textarea class="texta" rows="10" cols="50" placeholder="Your Message">
+			</textarea><br><br>
+			<button>Submit</button>
 
-    	</div>
-
-
-    	</div>
+		</div>
 	</div>
+	
 </body>
