--- a/P01-Style Guide/products.html
+++ b/P01-Style Guide/products.html
@@ -18,13 +18,13 @@
 		</nav><div class="left">
 	</div>
 	
-	<div class="right">
+	<div class="center-content">
 		<div class="grid">
 			<h2>Classic Americano</h2> 
 
         	<img src="americano.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
         	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
-        	<h3 class = "prices">Small: $3.50<br>Medium: $4:50<br>Large: $5.50<br></h3>
+        	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
         	<button class="add">add to cart</button>
         </div>
 
@@ -33,9 +33,9 @@
 
         	<img src="latte.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
 
-        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
+        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
 
-        	<h3 class = "prices">Small: $3.50<br>Medium: $4:50<br>Large: $5.50<br></h3>
+        	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
         	<button class="add">add to cart</button>
         </div>
 
@@ -44,9 +44,9 @@
 
         	<img src="coffee.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
 
-        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
+        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
 
-        	<h3 class = "prices">Small: $3.50<br>Medium: $4:50<br>Large: $5.50<br></h3>
+        	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
         	<button class="add">add to cart</button>
         </div>
 
@@ -55,9 +55,9 @@
 
         	<img src="mocha.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
 
-        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
+        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
 
-        	<h3 class = "prices">Small: $3.50<br>Medium: $4:50<br>Large: $5.50<br></h3>
+        	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
         	<button class="add">add to cart</button>
         </div>
 
@@ -66,9 +66,9 @@
 
         	<img src="iced coffee.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
 
-        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
+        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
 
-        	<h3 class = "prices">Small: $3.50<br>Medium: $4:50<br>Large: $5.50<br></h3>
+        	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
         	<button class="add">add to cart</button>
         </div>
 
@@ -77,9 +77,9 @@
 
         	<img src="black.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
 
-        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
+        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
 
-        	<h3 class = "prices">Small: $3.50<br>Medium: $4:50<br>Large: $5.50<br></h3>
+        	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
         	<button class="add">add to cart</button>
         </div>
 
