Added responsiveness to main page images

--- a/P01-Style Guide/products.html
+++ b/P01-Style Guide/products.html
@@ -15,9 +15,8 @@
             <a href="products.html" class="nav">MENU</a>
             <a href="checkout.html" class="nav">CART</a>
             <a href="contact.html" class="nav">CONTACT</a>
-		</nav><div class="left">
-	</div>
-	
+		</nav>
+        
 	<div class="center-content">
 		<div class="grid">
 			<h2>Classic Americano</h2> 
