Fixed body spacing and added footer
added padding to move the body down from fixed div, and added a footer with font awesome icons to use for icons and social media

--- a/P01-Style Guide/events.html
+++ b/P01-Style Guide/events.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <title>Events</title>
 
+<!-- link reference to font awesome icons online -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link href="css/main.css" rel="stylesheet">
 
 </head>
@@ -62,6 +64,14 @@
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
 </div>
 </div>
+
+<footer class="centered-text equalHW-footer">
+  <p>Follow us on social media!</p>
+  <div>
+  <i class="fab fa-facebook fa-2x"></i>
+  <i class="fab fa-instagram fa-2x"></i>
+  <i class="fab fa-twitter-square fa-2x"></i></div>
+</footer>
 
 
 </body>
