--- a/P01-Style Guide/checkout.html
+++ b/P01-Style Guide/checkout.html
@@ -4,6 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>P01 - Style Guide Template</title>
+
+	<!-- link reference to font awesome icons online -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link href="css/main.css" rel="stylesheet">
 </head>
 
@@ -81,4 +84,13 @@
 	        </div>
 
     	</div>
+
+    	<footer class="centered-text equalHW-footer">
+  <p>Follow us on social media!</p>
+  <div>
+  <i class="fab fa-facebook fa-2x"></i>
+  <i class="fab fa-instagram fa-2x"></i>
+  <i class="fab fa-twitter-square fa-2x"></i></div>
+</footer>
+
 	</body>
