--- a/P01-Style Guide/events.html
+++ b/P01-Style Guide/events.html
@@ -24,8 +24,9 @@
 <!-- event with right image -->
 <div class="column-half">
   <div class="equalHW centered-text">
-    <h3>About Us</h3><br>
+    <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
+  <button class="event-button">BUY TICKETS</button>
 </div>
  <div class="equalHW">
   <img src="menu-img2.jpg">
@@ -40,6 +41,7 @@
   <div class="equalHW centered-text">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
+  <button class="event-button">BUY TICKETS</button>
 </div>
 </div>
 
@@ -48,6 +50,7 @@
   <div class="equalHW centered-text">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
+  <button class="event-button">BUY TICKETS</button>
 </div>
  <div class="equalHW">
   <img src="menu-img2.jpg">
@@ -62,6 +65,7 @@
   <div class="equalHW centered-text">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
+  <button class="event-button">BUY TICKETS</button>
 </div>
 </div>
 
