Added cart icon in nav bar
got rid of cart text in nav bar and replaced it with a cart icon on the right side

--- a/P01-Style Guide/contact.html
+++ b/P01-Style Guide/contact.html
@@ -13,15 +13,15 @@
 <body> 
 	<nav>
 		<a href="main.html" class="nav">HOME</a>
-		<a href="events.html" class="nav">EVENTS</a>
-		<a href="products.html" class="nav">MENU</a>
-		<a href="checkout.html" class="nav">CART</a>
-		<a href="contact.html" class="nav">CONTACT</a>
+    <a href="events.html" class="nav">EVENTS</a>
+    <a href="products.html" class="nav">MENU</a>
+    <a href="contact.html" class="nav">CONTACT</a>
+    <i class="fas fa-shopping-cart nav-icon" onclick="location.href='checkout.html';" value="Go to Checkout"></i>
 	</nav>
 
 	<div class="center-content">
 		<div class="grid2">
-			<h2>Your Info</h2>
+			<h2>Contact Us!</h2>
 
 			<input type = "text" name="fn" placeholder="Your Name"><br>
 			<input type="text" name="fn" placeholder="Subject"><br><br>
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 	
-	<footer class="centered-text equalHW-footer">
+	<footer class="centered-text equalHW-footer contact-footer">
   <p>Follow us on social media!</p>
   <div>
   <i class="fab fa-facebook fa-2x"></i>
