--- a/P01-Style Guide/events.html
+++ b/P01-Style Guide/events.html
@@ -17,28 +17,28 @@
     <a href="main.html" class="nav">HOME</a>
     <a href="events.html" class="nav">EVENTS</a>
     <a href="products.html" class="nav">MENU</a>
-    <a href="checkout.html" class="nav">CART</a>
     <a href="contact.html" class="nav">CONTACT</a>
+    <i class="fas fa-shopping-cart nav-icon" onclick="location.href='checkout.html';" value="Go to Checkout"></i>
   </nav>
 
 <!-- event with right image -->
-<div class="column-half">
-  <div class="equalHW centered-text">
+<div class="column-half" id="block1">
+  <div class="equalHW centered-text flex-item">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
   <button class="event-button">BUY TICKETS</button>
 </div>
- <div class="equalHW">
+ <div class="equalHW flex-item">
   <img src="menu-img2.jpg">
 </div>
 </div>
 
 <!-- event with left image -->
-<div class="column-half">
-  <div class="equalHW">
+<div class="column-half" id="block2">
+  <div class="equalHW flex-item">
   <img src="menu-img2.jpg">
 </div>
-  <div class="equalHW centered-text">
+  <div class="equalHW centered-text flex-item">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
   <button class="event-button">BUY TICKETS</button>
@@ -47,22 +47,22 @@
 
 <!-- event with right image -->
 <div class="column-half">
-  <div class="equalHW centered-text">
+  <div class="equalHW centered-text flex-item5">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
   <button class="event-button">BUY TICKETS</button>
 </div>
- <div class="equalHW">
+ <div class="equalHW flex-item6">
   <img src="menu-img2.jpg">
 </div>
 </div>
 
 <!-- event with left image -->
 <div class="column-half">
-  <div class="equalHW">
+  <div class="equalHW flex-item7">
   <img src="menu-img2.jpg">
 </div>
-  <div class="equalHW centered-text">
+  <div class="equalHW centered-text flex-item8">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
   <button class="event-button">BUY TICKETS</button>
