--- a/P01-Style Guide/main.html
+++ b/P01-Style Guide/main.html
@@ -17,8 +17,9 @@
     <a href="main.html" class="nav">HOME</a>
     <a href="events.html" class="nav">EVENTS</a>
     <a href="products.html" class="nav">MENU</a>
-    <a href="checkout.html" class="nav">CART</a>
     <a href="contact.html" class="nav">CONTACT</a>
+    <i class="fas fa-shopping-cart nav-icon" onclick="location.href='checkout.html';" value="Go to Checkout"></i>
+    
   </nav>
 
 
