--- a/P01-Style Guide/events.html
+++ b/P01-Style Guide/events.html
@@ -22,23 +22,23 @@
   </nav>
 
 <!-- event with right image -->
-<div class="column-half" id="block1">
-  <div class="equalHW centered-text flex-item">
+<div class="column-half">
+  <div class="equalHW centered-text" id="block1">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
   <button class="event-button">BUY TICKETS</button>
 </div>
- <div class="equalHW flex-item">
+ <div class="equalHW" id="block2">
   <img src="menu-img2.jpg">
 </div>
 </div>
 
 <!-- event with left image -->
-<div class="column-half" id="block2">
-  <div class="equalHW flex-item">
+<div class="column-half">
+  <div class="equalHW" id="block3">
   <img src="menu-img2.jpg">
 </div>
-  <div class="equalHW centered-text flex-item">
+  <div class="equalHW centered-text" id="block4">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
   <button class="event-button">BUY TICKETS</button>
@@ -47,22 +47,22 @@
 
 <!-- event with right image -->
 <div class="column-half">
-  <div class="equalHW centered-text flex-item5">
+  <div class="equalHW centered-text" id="block5">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
   <button class="event-button">BUY TICKETS</button>
 </div>
- <div class="equalHW flex-item6">
+ <div class="equalHW" id="block6">
   <img src="menu-img2.jpg">
 </div>
 </div>
 
 <!-- event with left image -->
 <div class="column-half">
-  <div class="equalHW flex-item7">
+  <div class="equalHW" id="block7">
   <img src="menu-img2.jpg">
 </div>
-  <div class="equalHW centered-text flex-item8">
+  <div class="equalHW centered-text" id="block8">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
   <button class="event-button">BUY TICKETS</button>
