--- a/P01-Style Guide/products.html
+++ b/P01-Style Guide/products.html
@@ -27,7 +27,7 @@
         	<img src="americano.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
         	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
         	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
-        	<button class="add">add to cart</button>
+        	<button class="add"><i class="fas fa-plus"></i>add to order</button>
         </div>
 
         <div class="grid">
@@ -38,7 +38,7 @@
         	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
 
         	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
-        	<button class="add">add to cart</button>
+        	<button class="add"><i class="fas fa-plus"></i>add to order</button>
         </div>
 
         <div class="grid">
@@ -49,7 +49,7 @@
         	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
 
         	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
-        	<button class="add">add to cart</button>
+        	<button class="add"><i class="fas fa-plus"></i>add to order</button>
         </div>
 
         <div class="grid">
@@ -60,7 +60,7 @@
         	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
 
         	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
-        	<button class="add">add to cart</button>
+        	<button class="add"><i class="fas fa-plus"></i>add to order</button>
         </div>
 
         <div class="grid">
@@ -71,7 +71,7 @@
         	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
 
         	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
-        	<button class="add">add to cart</button>
+        	<button class="add"><i class="fas fa-plus"></i>add to order</button>
         </div>
 
         <div class="grid">
@@ -82,7 +82,7 @@
         	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
 
         	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
-        	<button class="add">add to cart</button>
+        	<button class="add"><i class="fas fa-plus"></i>add to order</button>
         </div>
 
 	</div>
