Edited product page, added select bars

--- a/P01-Style Guide/events.html
+++ b/P01-Style Guide/events.html
@@ -26,7 +26,7 @@
   <div class="equalHW centered-text" id="block1">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
-  <button class="event-button">BUY TICKETS</button>
+  <button class="event-button">VIEW DETAILS</button>
 </div>
  <div class="equalHW" id="block2">
   <img src="menu-img2.jpg">
@@ -41,7 +41,7 @@
   <div class="equalHW centered-text" id="block4">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
-  <button class="event-button">BUY TICKETS</button>
+  <button class="event-button">VIEW DETAILS</button>
 </div>
 </div>
 
@@ -50,7 +50,7 @@
   <div class="equalHW centered-text" id="block5">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
-  <button class="event-button">BUY TICKETS</button>
+  <button class="event-button">VIEW DETAILS</button>
 </div>
  <div class="equalHW" id="block6">
   <img src="menu-img2.jpg">
@@ -65,7 +65,7 @@
   <div class="equalHW centered-text" id="block8">
     <h3>About Us</h3>
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
-  <button class="event-button">BUY TICKETS </button>
+  <button class="event-button">VIEW DETAILS</button>
 </div>
 </div>
 
