--- a/P01-Style Guide/contact.html
+++ b/P01-Style Guide/contact.html
@@ -27,7 +27,7 @@
 			<input type="text" name="fn" placeholder="Subject"><br><br>
 			<textarea class="texta" rows="10" cols="50" placeholder="Your Message">
 			</textarea><br><br>
-			<button>Submit</button>
+			<button>Send</button>
 
 		</div>
 	</div>
