--- a/P01-Style Guide/products.html
+++ b/P01-Style Guide/products.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8"name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>P01 - Style Guide Template</title>
 
     <!-- link reference to font awesome icons online -->
@@ -23,66 +23,59 @@
 	<div class="center-content">
 		<div class="grid">
 			<h2>Classic Americano</h2> 
-
-        	<img src="americano.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
-        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour. Espresso shots are topped with hot water to produce a light layer of crema. The result is this wonderfully rich cup with depth and nuance. Pro tip: for additional caffeine, ask your barista to try this with an extra shot (75 mg caffeine per shot).</p>
-        	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
-        	<button class="add"><i class="fas fa-plus"></i>add to order</button>
+            <div class="crop-image">
+        	<img src="americano.jpg" class="linkimage" onclick="location.href='product-view1.html';"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
+  
+        <div class="select-display">
+        	<button class="add"><i class="fas fa-plus"></i>add to order</button></div>
         </div>
 
         <div class="grid">
         	<h2>Latte</h2>
+            <div class="crop-image">
+        	<img src="latte.jpg" class="linkimage" onclick="location.href='product-view2.html';"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
 
-        	<img src="latte.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
-
-        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
-
-        	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
-        	<button class="add"><i class="fas fa-plus"></i>add to order</button>
+             <div class="select-display">
+        	<button class="add"><i class="fas fa-plus"></i>add to order</button></div>
         </div>
 
         <div class="grid">
         	<h2>Cappuccino</h2>
+            <div class="crop-image">
+        	<img src="coffee.jpg" class="linkimage" onclick="location.href='product-view1.html';"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
 
-        	<img src="coffee.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
-
-        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
-
-        	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
-        	<button class="add"><i class="fas fa-plus"></i>add to order</button>
+        	 <div class="select-display">
+        	<button class="add"><i class="fas fa-plus"></i>add to order</button></div>
         </div>
 
         <div class="grid">
 			<h2>Mocha</h2>
 
-        	<img src="mocha.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
+            <div class="crop-image">
+        	<img src="mocha.jpg" class="linkimage" onclick="location.href='product-view2.html';"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
 
-        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
-
-        	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
-        	<button class="add"><i class="fas fa-plus"></i>add to order</button>
+            <div class="select-display">
+        	<button class="add"><i class="fas fa-plus"></i>add to order</button></div>
         </div>
 
         <div class="grid">
         	<h2>Iced Coffee</h2>
 
-        	<img src="iced coffee.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
+            <div class="crop-image">
+        	<img src="iced coffee.jpg" class="linkimage" onclick="location.href='product-view1.html';"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
 
-        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
-
-        	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
-        	<button class="add"><i class="fas fa-plus"></i>add to order</button>
+            <div class="select-display">
+        	<button class="add"><i class="fas fa-plus"></i>add to order</button></div>
         </div>
 
         <div class="grid">
         	<h2>Coffee</h2>
 
-        	<img src="black.jpg" class="linkimage"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html-->
+            <div class="crop-image">
+        	<img src="black.jpg" class="linkimage" onclick="location.href='product-view2.html';"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
 
-        	<p>Our americano uses espresso made with the the most premium coffee beans, ground as fine as possible for maximum flavour.</p>
-
-        	<h3 class = "prices">Small: $3.50<br>Medium: $4.50<br>Large: $5.50<br></h3>
-        	<button class="add"><i class="fas fa-plus"></i>add to order</button>
+            <div class="select-display">
+        	<button class="add"><i class="fas fa-plus"></i>add to order</button></div>
         </div>
 
 	</div>
@@ -94,5 +87,81 @@
   <i class="fab fa-instagram fa-2x"></i>
   <i class="fab fa-twitter-square fa-2x"></i></div>
 </footer>
+
+<!-- script for select menu -->
+<script>
+var x, i, j, selElmnt, a, b, c;
+/*look for any elements with the class "custom-select":*/
+x = document.getElementsByClassName("custom-select");
+for (i = 0; i < x.length; i++) {
+  selElmnt = x[i].getElementsByTagName("select")[0];
+  /*for each element, create a new DIV that will act as the selected item:*/
+  a = document.createElement("DIV");
+  a.setAttribute("class", "select-selected");
+  a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
+  x[i].appendChild(a);
+  /*for each element, create a new DIV that will contain the option list:*/
+  b = document.createElement("DIV");
+  b.setAttribute("class", "select-items select-hide");
+  for (j = 1; j < selElmnt.length; j++) {
+    /*for each option in the original select element,
+    create a new DIV that will act as an option item:*/
+    c = document.createElement("DIV");
+    c.innerHTML = selElmnt.options[j].innerHTML;
+    c.addEventListener("click", function(e) {
+        /*when an item is clicked, update the original select box,
+        and the selected item:*/
+        var y, i, k, s, h;
+        s = this.parentNode.parentNode.getElementsByTagName("select")[0];
+        h = this.parentNode.previousSibling;
+        for (i = 0; i < s.length; i++) {
+          if (s.options[i].innerHTML == this.innerHTML) {
+            s.selectedIndex = i;
+            h.innerHTML = this.innerHTML;
+            y = this.parentNode.getElementsByClassName("same-as-selected");
+            for (k = 0; k < y.length; k++) {
+              y[k].removeAttribute("class");
+            }
+            this.setAttribute("class", "same-as-selected");
+            break;
+          }
+        }
+        h.click();
+    });
+    b.appendChild(c);
+  }
+  x[i].appendChild(b);
+  a.addEventListener("click", function(e) {
+      /*when the select box is clicked, close any other select boxes,
+      and open/close the current select box:*/
+      e.stopPropagation();
+      closeAllSelect(this);
+      this.nextSibling.classList.toggle("select-hide");
+      this.classList.toggle("select-arrow-active");
+    });
+}
+function closeAllSelect(elmnt) {
+  /*a function that will close all select boxes in the document,
+  except the current select box:*/
+  var x, y, i, arrNo = [];
+  x = document.getElementsByClassName("select-items");
+  y = document.getElementsByClassName("select-selected");
+  for (i = 0; i < y.length; i++) {
+    if (elmnt == y[i]) {
+      arrNo.push(i)
+    } else {
+      y[i].classList.remove("select-arrow-active");
+    }
+  }
+  for (i = 0; i < x.length; i++) {
+    if (arrNo.indexOf(i)) {
+      x[i].classList.add("select-hide");
+    }
+  }
+}
+/*if the user clicks anywhere outside the select box,
+then close all select boxes:*/
+document.addEventListener("click", closeAllSelect);
+</script>
 
 </body>
