--- a/P01-Style Guide/contact.html
+++ b/P01-Style Guide/contact.html
@@ -13,14 +13,14 @@
 <body> 
 	<nav>
 		<a href="main.html" class="nav">HOME</a>
-    <a href="events.html" class="nav">EVENTS</a>
-    <a href="products.html" class="nav">MENU</a>
-    <a href="contact.html" class="nav">CONTACT</a>
-    <i class="fas fa-shopping-cart nav-icon" onclick="location.href='checkout.html';" value="Go to Checkout"></i>
+    	<a href="events.html" class="nav">EVENTS</a>
+    	<a href="products.html" class="nav">MENU</a>
+    	<a href="contact.html" class="nav">CONTACT</a>
+    	<i class="fas fa-shopping-cart nav-icon" onclick="location.href='checkout.html';" value="Go to Checkout"></i>
 	</nav>
 
 	<div class="center-content">
-		<div class="grid2">
+		<div class="grid2 contactbody">
 			<h2>Contact Us!</h2>
 
 			<input type = "text" name="fn" placeholder="Your Name"><br>
@@ -28,17 +28,18 @@
 			<textarea class="texta" rows="10" cols="50" placeholder="Your Message">
 			</textarea><br><br>
 			<button>Send</button>
-
 		</div>
 	</div>
-	
-	<footer class="centered-text equalHW-footer contact-footer">
-  <p>Follow us on social media!</p>
-  <div>
-  <i class="fab fa-facebook fa-2x"></i>
-  <i class="fab fa-instagram fa-2x"></i>
-  <i class="fab fa-twitter-square fa-2x"></i></div>
+
+</body>
+
+<footer class="centered-text equalHW-footer contact-footer">
+  	<p>Follow us on social media!</p>
+  	<div>
+	  <i class="fab fa-facebook fa-2x"></i>
+	  <i class="fab fa-instagram fa-2x"></i>
+	  <i class="fab fa-twitter-square fa-2x"></i>
+	</div>
 </footer>
 
 
-</body>
