Home Page Overlaps
Splash image text

Banner Button Overlap

--- a/P01-Style Guide/main.html
+++ b/P01-Style Guide/main.html
@@ -22,23 +22,19 @@
   </nav>
 
 
-  <div class="equalHW">
+  <div class="homesplash">
     <img src="menu-img.jpg">
     <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat.</p>
-</div>
+  </div>
 
 
 
-<div class="column-half">
-  <div class="equalHW centered-text">
+<div class="equalHW centered-text">
     <h3>About Us</h3>
-<<<<<<< Updated upstream
+
   <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
 </div>
-=======
-    <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
-  </div>
->>>>>>> Stashed changes
+
 
  <div class="equalHW">
   <img src="menu-img2.jpg">
@@ -47,8 +43,9 @@
 </div>
 
 
-<div class="equalHW">
-<img src="banner-img.jpg">
+<div class="homebotbanner">
+  <img src="banner-img.jpg">
+  <button>?????</button>
 </div>
 
 <footer class="centered-text equalHW-footer">
