--- a/P01-Style Guide/main.html
+++ b/P01-Style Guide/main.html
@@ -45,7 +45,7 @@
 
 <div class="homebotbanner">
   <img src="banner-img.jpg">
-  <button>?????</button>
+  <button>See Upcoming Events</button>
 </div>
 
 <footer class="centered-text equalHW-footer">
