Edits on column-half, img, and some text
now all column-half divs will fit the entire screen for better viewing proportions

--- a/P01-Style Guide/checkout.html
+++ b/P01-Style Guide/checkout.html
@@ -79,14 +79,14 @@
 
 		<div class="grid2" id="main">
 
-	        <h2>Items</h2>
-	        <div class="item itemtop">
+	        <h2>Your Order</h2>
+	        <div class="item">
 	        	<img src="iced coffee.jpg"> 
 	        	<h3> Iced Coffee &nbsp;&nbsp; Size: sml <br><br>
 	        	<button class="edit">edit</button>&nbsp;<button class="remove">remove</button></h4>	    
 	        	<p class="rightalign">Price: $2.50</p>
 	        	
-	        </div><br>
+	        </div>
 
 	        <div class="item">
 	        	<img src="americano.jpg"> 
