--- a/P01-Style Guide/events.html
+++ b/P01-Style Guide/events.html
@@ -24,23 +24,23 @@
 <!-- event with right image -->
 <div class="column-half">
   <div class="equalHW centered-text" id="block1">
-    <h3>About Us</h3>
-  <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
+    <h3>The World Barista Championship</h3>
+  <p class="bodyp">The World Barista Championship (WBC) is the preeminent international coffee competition produced annually by World Coffee Events (WCE). The competition focuses on promoting excellence in coffee, advancing the barista profession, and engaging a worldwide audience with an annual championship event that serves as the culmination of local and regional events around the globe.</p>
   <button class="event-button">VIEW DETAILS</button>
 </div>
  <div class="equalHW" id="block2">
-  <img src="menu-img2.jpg">
+  <img src="event1.jpg">
 </div>
 </div>
 
 <!-- event with left image -->
 <div class="column-half">
   <div class="equalHW" id="block3">
-  <img src="menu-img2.jpg">
+  <img src="event2.jpg">
 </div>
   <div class="equalHW centered-text" id="block4">
-    <h3>About Us</h3>
-  <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
+    <h3>The World Brewers Cup</h3>
+  <p class="bodyp">The World Brewers Cup competition highlights the craft of filter coffee brewing by hand, promoting manual coffee brewing and service excellence. In this Championship, competitors prepare and serve three individual beverages for a panel of judges. </p>
   <button class="event-button">VIEW DETAILS</button>
 </div>
 </div>
@@ -48,23 +48,23 @@
 <!-- event with right image -->
 <div class="column-half">
   <div class="equalHW centered-text" id="block5">
-    <h3>About Us</h3>
-  <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
+    <h3>Coffee in Good Spirits Championship</h3>
+  <p class="bodyp">The World Coffee in Good Spirits Championship promotes innovative beverage recipes that showcase coffee and spirits in a competition format. This competition highlights the barista/barkeeper’s mixology skills in a setting where coffee and alcohol go perfectly together. From the traditional Irish Coffee (with whiskey and coffee), to unique cocktail combinations.</p>
   <button class="event-button">VIEW DETAILS</button>
 </div>
  <div class="equalHW" id="block6">
-  <img src="menu-img2.jpg">
+  <img src="event3.jpg">
 </div>
 </div>
 
 <!-- event with left image -->
 <div class="column-half">
   <div class="equalHW" id="block7">
-  <img src="menu-img2.jpg">
+  <img src="event4.jpg">
 </div>
   <div class="equalHW centered-text" id="block8">
-    <h3>About Us</h3>
-  <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
+    <h3>World Latte Art Championship</h3>
+  <p class="bodyp">The World Latte Art Championship highlights artistic expression in a competition platform that challenges the barista in an on-demand performance. Baristas are judged based on visual attributes, creativity, identical patterns in the pairs, contrast in patterns, and overall performance.</p>
   <button class="event-button">VIEW DETAILS</button>
 </div>
 </div>
