--- a/P01-Style Guide/product-view2.html
+++ b/P01-Style Guide/product-view2.html
@@ -23,12 +23,13 @@
 
   <div class="column-half">
     <div class="equalHW">
-      <img src="menu-img2.jpg">
+      <img src="latte.jpg">
     </div>
 
   <div class="equalHW centered-text">
     <h2>Latte</h2>
-  <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
+  <p class="bodyp">Our latte uses our freshly pressed espresso, and a bright steamed milk to balance our rich dark espresso. Add anything you want to turn this latte into a personalized drink for yours truly.</p>
+  <br>
 <div class="select-display">
 <div class="custom-select">
   <select>
