--- a/P01-Style Guide/main.html
+++ b/P01-Style Guide/main.html
@@ -24,7 +24,7 @@
 
   <div class="homesplash">
     <img src="menu-img.jpg">
-    <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat.</p>
+    <p class="bodyp">Our coffeehouses and delivery services have become a beacon for coffee lovers everywhere. People know they can count on genuine service, an inviting atmosphere and a superb cup of expertly roasted and richly brewed coffee every time.</p>
   </div>
 
 
@@ -32,7 +32,7 @@
 <div class="equalHW centered-text">
     <h3>About Us</h3>
 
-  <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
+  <p class="bodyp">We’re not just passionate purveyors of coffee, but everything else that goes with a full and rewarding coffeehouse experience. We also offer a selection of premium coffee, teas and other delectable treats to please the taste buds. And the music you hear in store is chosen for its artistry and appeal.</p>
 </div>
 
 
