--- a/P01-Style Guide/product-view1.html
+++ b/P01-Style Guide/product-view1.html
@@ -23,12 +23,12 @@
 
   <div class="column-half">
     <div class="equalHW">
-      <img src="menu-img2.jpg">
+      <img src="americano.jpg">
     </div>
 
   <div class="equalHW centered-text">
     <h2>Classic Americano</h2>
-  <p class="bodyp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut maximus nibh. Nunc non scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur dolor erat, imperdiet nec pulvinar nec, dapibus id magna. Nam rhoncus pharetra enim at volutpat. Cras eu faucibus purus, quis porta nisi. Vestibulum eget consequat lectus.</p>
+  <p class="bodyp">Our Classic Americano is made with the highest quality espresso made from premium coffee beans ground as fine as possible, delivering a strong yet supple flavor that can't be matched.</p> <br>
 <div class="select-display">
 <div class="custom-select">
   <select>
