index redirect to main

--- a/P01-Style Guide/main.html
+++ b/P01-Style Guide/main.html
@@ -24,7 +24,8 @@
 
   <div class="homesplash">
     <img src="menu-img.jpg">
-    <p class="bodyp">Our coffeehouses and delivery services have become a beacon for coffee lovers everywhere. People know they can count on genuine service, an inviting atmosphere and a superb cup of expertly roasted and richly brewed coffee every time.</p>
+    <p class="bodyp">
+    Our coffeehouses and delivery services have become a beacon for coffee lovers everywhere. People know they can count on genuine service, an inviting atmosphere and a superb cup of expertly roasted and richly brewed coffee every time.</p>
   </div>
 
 
