--- a/P01-Style Guide/index.html
+++ b/P01-Style Guide/index.html
@@ -7,7 +7,7 @@
     <title>P01 - Style Guide Template</title>
 
     <link href="css/main.css" rel="stylesheet">
-
+    <script> window.location.replace('main.html'); </script>
   </head>
 
   <body>
